# file-stream

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
file_stream/: apps.py  serializers.py  urls.py  views.py
file_stream.egg-info/: PKG-INFO  SOURCES.txt
