[metadata]
name = file-stream
version = 0.1.0
description = A Django project that provides API endpoints for reading and writing files.
author = Md Manishurrahman
author_email = mdmanishurrahman7860@gmail.com
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
# url = https://file-stream.example.com/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Framework :: Django
    Framework :: Django :: 5.0
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
install_requires =
    django>=5.0
    djangorestframework>=3.15
python_requires = >=3.12
